# cli_bar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  api_info.md  pyproject.toml
docs/: cli_examples.md  features.md
src/cli_bar/: __init__.py  app.py  ascii_plot.py  i18n.py  main.py  views.py
src/cli_bar/commands/: __init__.py  analysis.py  planning.py  profile.py  sessions.py
src/cli_bar/locales/: en.yaml  ru.yaml  zh.yaml
tests/: test_smoke.py
