[project]
name = "cli-bar"
version = "0.1.0"
description = "CLI for BAR-SCHEDULER"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # To update: uv sync --upgrade-package bar-scheduler
    "bar-scheduler @ git+https://github.com/bvpotapenko/bar-scheduler.git",
    "rich>=14.3.3",
    "typer>=0.24.1",
]
