[project]
name = "cli-bar"
version = "0.1.1"
description = "CLI for BAR-SCHEDULER"
readme = "README.md"
requires-python = ">=3.14"

license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Potapenko Bogdan"}
]

dependencies = [
    # To update: uv sync --upgrade-package bar-scheduler
    "bar-scheduler @ git+https://github.com/bvpotapenko/bar-scheduler.git",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
cli-bar = "cli_bar.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cli_bar"]

[dependency-groups]
dev = ["pytest>=8.0"]
